# MY_ME570_tovar

assignment-5-tovarj5/: CMakeLists.txt  Cone.cpp  Cone.h  Ellipsoid.cpp  Ellipsoid.h  box.cpp  box.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgwidget.cpp  osgwidget.h  shape.cpp  shape.h  shapesoutputwindow.cpp  shapesoutputwindow.h  shapesoutputwindow.ui  xmlshapesreader.cpp  xmlshapesreader.h  xmlshapeswriter.cpp  xmlshapeswriter.h
